Changelog for Parse::Method::Signatures

  - Re-introduce remaining_input since TryCatch depends upon it

1.003002 - 2009/03/04
  - Now *really* remove deps on Data::Dump. Not my day w.r.t. dists

1.003001 - 2009/03/04
  - Remove unmarked test dependency on Data::Dump

1.003000 - 2009/03/03
  - Port to using PPI to do the parsing
  - Produces nicer error messages
  - Refactor internals to be much more readable (thanks to Piers Cawley)

1.002000 - 2009/02/21
  - Will now build a Moose TC object for types of params
  - Add a few more docs

1.001001 - 2009/01/31
  - Handle fat commas in TCs (for MooseX::Types::Structured's Dict)
  - Add missing dep on Test::Differences

1.001000 - 2009/01/31
  - Change how TCs are stored and parse for better support in reconstructing
    types at runtime
  - Switch to MooseX::Types
  - Support traits (e.g. does coerce) on params

1.000000 - 2009/01/05
  - Initial release